--- a/index.html
+++ b/index.html
@@ -481,7 +481,11 @@
     <!-- ======= Footer ======= -->
     <footer id="footer">
         <div class="container">
-            <!-- Todo -->
+            <!-- Logo -->
+            <div class="d-flex">
+                <img style="width: 2rem; height: 2rem;" src="logo1.png" alt="" srcset="">
+                <p style="margin: 3px 10px;">Gama Prime</p>
+            </div>
         </div>
     </footer>
     <!-- End  Footer -->
