Feat: add copy to logo

--- a/index.html
+++ b/index.html
@@ -482,9 +482,9 @@
     <footer id="footer">
         <div class="container">
             <!-- Logo -->
-            <div class="d-flex">
+            <div class="d-flex copyright">
                 <img style="width: 2rem; height: 2rem;" src="logo1.png" alt="" srcset="">
-                <p style="margin: 3px 10px;">Gama Prime</p>
+                <p style="margin: 3px 5px;">Gama Prime <span>-</span> <span style="color: #149DDD;">&copy;2021</span></p>
             </div>
         </div>
     </footer>
