--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -65,8 +65,9 @@
         <section id="breadcrumbs" class="breadcrumbs">
             <div class="container">
 
-                <div class="d-flex justify-content-between align-items-center">
-                    <h2>Project Details</h2>
+                <div class="d-flex">
+                    <i style="margin: 2px 10px 0 0; cursor: pointer;" class="bi bi-arrow-left backButton"></i>
+                    <h2>Project Detail</h2>
                 </div>
 
             </div>
@@ -152,6 +153,8 @@
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
+    <script src="utils.js"></script>
+
 
 </body>
 
