Feat: remove specialty scetion

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
                     <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Experience</span></a></li>
                     <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-                    <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Specialty</span></a></li>
+                    <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Specialty</span></a></li> -->
                 </ul>
             </nav>
             <!-- .nav-menu -->
@@ -342,7 +342,7 @@
         <!-- End Portfolio Section -->
 
         <!-- ======= Services Section ======= -->
-        <section id="services" class="services">
+        <!-- <section id="services" class="services">
             <div class="container">
 
                 <div class="section-title">
@@ -383,7 +383,7 @@
                 </div>
 
             </div>
-        </section>
+        </section> -->
         <!-- End Services Section -->
 
         <!-- ======= Testimonials Section ======= -->
