Feat: top people

--- a/generalDashboard/generalDashboard.html
+++ b/generalDashboard/generalDashboard.html
@@ -547,63 +547,49 @@
                         </div>
 
                         <div class="card-body">
-                            <h5 class="card-title">Recent Activity <span>| Today</span></h5>
+                            <h5 class="card-title">Top People <span>| This Year</span></h5>
 
                             <div class="activity">
 
                                 <div class="activity-item d-flex">
-                                    <div class="activite-label">32 min</div>
+                                    <div class="activite-label">2 yrs</div>
                                     <i class='bi bi-circle-fill activity-badge text-success align-self-start'></i>
                                     <div class="activity-content">
-                                        Quia quae rerum <a href="#" class="fw-bold text-dark">explicabo officiis</a> beatae
+                                        <a href="../userDashboard.html" class="fw-bold text-dark">Adebayou Drako</a>
                                     </div>
                                 </div>
-                                <!-- End activity item-->
 
                                 <div class="activity-item d-flex">
-                                    <div class="activite-label">56 min</div>
-                                    <i class='bi bi-circle-fill activity-badge text-danger align-self-start'></i>
-                                    <div class="activity-content">
-                                        Voluptatem blanditiis blanditiis eveniet
-                                    </div>
-                                </div>
-                                <!-- End activity item-->
-
-                                <div class="activity-item d-flex">
-                                    <div class="activite-label">2 hrs</div>
-                                    <i class='bi bi-circle-fill activity-badge text-primary align-self-start'></i>
-                                    <div class="activity-content">
-                                        Voluptates corrupti molestias voluptatem
-                                    </div>
-                                </div>
-                                <!-- End activity item-->
-
-                                <div class="activity-item d-flex">
-                                    <div class="activite-label">1 day</div>
-                                    <i class='bi bi-circle-fill activity-badge text-info align-self-start'></i>
-                                    <div class="activity-content">
-                                        Tempore autem saepe <a href="#" class="fw-bold text-dark">occaecati voluptatem</a> tempore
-                                    </div>
-                                </div>
-                                <!-- End activity item-->
-
-                                <div class="activity-item d-flex">
-                                    <div class="activite-label">2 days</div>
+                                    <div class="activite-label">5 mts</div>
                                     <i class='bi bi-circle-fill activity-badge text-warning align-self-start'></i>
                                     <div class="activity-content">
-                                        Est sit eum reiciendis exercitationem
+                                        <a href="../userDashboard.html" class="fw-bold text-dark">Ibrahim Ismail</a>
                                     </div>
                                 </div>
-                                <!-- End activity item-->
 
                                 <div class="activity-item d-flex">
-                                    <div class="activite-label">4 weeks</div>
-                                    <i class='bi bi-circle-fill activity-badge text-muted align-self-start'></i>
+                                    <div class="activite-label">5 yrs</div>
+                                    <i class='bi bi-circle-fill activity-badge text-primary align-self-start'></i>
                                     <div class="activity-content">
-                                        Dicta dolorem harum nulla eius. Ut quidem quidem sit quas
+                                        <a href="../userDashboard.html" class="fw-bold text-dark">Abubakar Bello</a>
                                     </div>
                                 </div>
-                                <!-- End activity item-->
+
+                                <div class="activity-item d-flex">
+                                    <div class="activite-label">3 yrs</div>
+                                    <i class='bi bi-circle-fill activity-badge text-primary align-self-start'></i>
+                                    <div class="activity-content">
+                                        <a href="../userDashboard.html" class="fw-bold text-dark">Micheal Oyin</a>
+                                    </div>
+                                </div>
+
+                                <div class="activity-item d-flex">
+                                    <div class="activite-label">2 mts</div>
+                                    <i class='bi bi-circle-fill activity-badge text-danger align-self-start'></i>
+                                    <div class="activity-content">
+                                        <a href="../userDashboard.html" class="fw-bold text-dark">Patricia Drako</a>
+                                    </div>
+                                </div>
 
                             </div>
 
