--- a/generalDashboard/generalDashboard.html
+++ b/generalDashboard/generalDashboard.html
@@ -236,13 +236,13 @@
                                         document.addEventListener("DOMContentLoaded", () => {
                                             new ApexCharts(document.querySelector("#reportsChart"), {
                                                 series: [{
-                                                    name: 'Sales',
+                                                    name: 'Registered Users',
                                                     data: [31, 40, 28, 51, 42, 82, 56],
                                                 }, {
-                                                    name: 'Revenue',
+                                                    name: 'Active Users',
                                                     data: [11, 32, 45, 32, 34, 52, 41]
                                                 }, {
-                                                    name: 'Customers',
+                                                    name: 'Inactive Users',
                                                     data: [15, 11, 32, 18, 9, 24, 11]
                                                 }],
                                                 chart: {
