--- a/userDashboard.html
+++ b/userDashboard.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Gama Prime - Index</title>
+    <title>Gamma Prime - Index</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -488,7 +488,7 @@
             <!-- Logo -->
             <div class="d-flex copyright">
                 <img style="width: 2rem; height: 2rem;" src="logo1.png" alt="" srcset="">
-                <p style="margin: 3px 5px;">Gama Prime <span>-</span> <span style="color: #149DDD;">&copy;2021</span></p>
+                <p style="margin: 3px 5px;">Gamma Prime <span>-</span> <span style="color: #149DDD;">&copy;2021</span></p>
             </div>
         </div>
     </footer>
