--- a/generalDashboard/generalDashboard.html
+++ b/generalDashboard/generalDashboard.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Gama Prime - General Dashboard</title>
+    <title>Gamma Prime - General Dashboard</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -39,7 +39,7 @@
         <div class="d-flex align-items-center justify-content-between">
             <a href="index.html" class="logo d-flex align-items-center">
                 <img src="../logo1.png" alt="">
-                <span class="d-none d-lg-block">Gama Prime</span>
+                <span class="d-none d-lg-block">Gamma Prime</span>
             </a>
             <i class="bi bi-list toggle-sidebar-btn"></i>
         </div>
@@ -93,7 +93,7 @@
                         </li>
 
                         <li>
-                            <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">
+                            <a class="dropdown-item d-flex align-items-center" href="faq.html">
                                 <i class="bi bi-question-circle"></i>
                                 <span>Need Help?</span>
                             </a>
@@ -145,7 +145,7 @@
             <!-- End Profile Page Nav -->
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="pages-faq.html">
+                <a class="nav-link collapsed" href="faq.html">
                     <i class="bi bi-question-circle"></i>
                     <span>F.A.Q</span>
                 </a>
@@ -227,7 +227,7 @@
                                 </div>
 
                                 <div class="card-body">
-                                    <h5 class="card-title">Reports <span>/Today</span></h5>
+                                    <h5 class="card-title">Stats <span>/Today</span></h5>
 
                                     <!-- Line Chart -->
                                     <div id="reportsChart"></div>
@@ -451,7 +451,7 @@
     <!-- ======= Footer ======= -->
     <footer id="footer" class="footer">
         <div class="copyright">
-            &copy; Copyright <strong><span>Gama Prime</span></strong>. All Rights Reserved
+            &copy; Copyright <strong><span>Gamma Prime</span></strong>. All Rights Reserved
         </div>
     </footer>
     <!-- End Footer -->
