Feat: people page

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         </div>
                         <div class="checkbox-circle mt-24">
                             <label>
-									<input type="checkbox" >  Please accept <a href="#">terms and conditions ?</a>
+									<input type="checkbox" >  Please accept <a href="generalDashboard/generalDashboard.html">terms and conditions ?</a>
 									<span class="checkmark"></span>
 								</label>
                         </div>
