--- a/generalDashboard/faq.html
+++ b/generalDashboard/faq.html
@@ -137,7 +137,7 @@
             <li class="nav-heading">Pages</li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="users-profile.html">
+                <a class="nav-link collapsed" href="people.html">
                     <i class="bi bi-people"></i>
                     <span>People</span>
                 </a>
@@ -145,7 +145,7 @@
             <!-- End Profile Page Nav -->
 
             <li class="nav-item">
-                <a class="nav-link " href="pages-faq.html">
+                <a class="nav-link " href="#">
                     <i class="bi bi-question-circle"></i>
                     <span>F.A.Q</span>
                 </a>
