--- a/generalDashboard/generalDashboard.html
+++ b/generalDashboard/generalDashboard.html
@@ -127,7 +127,7 @@
         <ul class="sidebar-nav" id="sidebar-nav">
 
             <li class="nav-item">
-                <a class="nav-link " href="index.html">
+                <a class="nav-link " href="#">
                     <i class="bi bi-grid"></i>
                     <span>Dashboard</span>
                 </a>
@@ -137,7 +137,7 @@
             <li class="nav-heading">Pages</li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="users-profile.html">
+                <a class="nav-link collapsed" href="people.html">
                     <i class="bi bi-people"></i>
                     <span>People</span>
                 </a>
