--- a/generalDashboard/people.html
+++ b/generalDashboard/people.html
@@ -127,7 +127,7 @@
         <ul class="sidebar-nav" id="sidebar-nav">
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="generalDashboard.html">
+                <a class="nav-link collapsed" href="dashboard.html">
                     <i class="bi bi-grid"></i>
                     <span>Dashboard</span>
                 </a>
