--- a/generalDashboard/faq.html
+++ b/generalDashboard/faq.html
@@ -37,7 +37,7 @@
     <header id="header" class="header fixed-top d-flex align-items-center">
 
         <div class="d-flex align-items-center justify-content-between">
-            <a href="index.html" class="logo d-flex align-items-center">
+            <a href="register.html" class="logo d-flex align-items-center">
                 <img src="../logo1.png" alt="">
                 <span class="d-none d-lg-block">Gamma Prime</span>
             </a>
@@ -103,7 +103,7 @@
                         </li>
 
                         <li>
-                            <a class="dropdown-item d-flex align-items-center" href="#">
+                            <a class="dropdown-item d-flex align-items-center" href="../register.html">
                                 <i class="bi bi-box-arrow-right"></i>
                                 <span>Sign Out</span>
                             </a>
