--- a/userDashboard.html
+++ b/userDashboard.html
@@ -38,7 +38,7 @@
 
             <div class="profile">
                 <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-                <h1 class="text-light"><a href="index.html">Adebayo Drako</a></h1>
+                <h1 class="text-light"><a href="register.html">Adebayo Drako</a></h1>
                 <div class="social-links mt-3 text-center">
                     <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
                     <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
