--- a/generalDashboard/faq.html
+++ b/generalDashboard/faq.html
@@ -10,8 +10,7 @@
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="../logo1.png" rel="icon">
 
     <!-- Google Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect">
@@ -37,7 +36,7 @@
     <header id="header" class="header fixed-top d-flex align-items-center">
 
         <div class="d-flex align-items-center justify-content-between">
-            <a href="register.html" class="logo d-flex align-items-center">
+            <a href="dashboard.html" class="logo d-flex align-items-center">
                 <img src="../logo1.png" alt="">
                 <span class="d-none d-lg-block">Gamma Prime</span>
             </a>
