Feat: change primary color

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
+
+            <button class="btn btn-primary">Register</button>
             <!-- .navbar -->
 
         </div>
