--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
 
-            <button class="btn btn-primary">Register</button>
+            <a href="register.html">
+                <button class="btn btn-primary">Register</button>
+            </a>
             <!-- .navbar -->
 
         </div>
@@ -134,28 +136,27 @@
                     </div>
                     <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
                         <p class="fst-italic">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            We are scaling the AI ecosystem in Africa through local talent, local companies and local products.
                         </p>
                         <ul>
                             <li>
                                 <i class="bx bx-store-alt"></i>
                                 <div>
-                                    <h5>Ullamco laboris nisi ut aliquip consequat</h5>
-                                    <p>Magni facilis facilis repellendus cum excepturi quaerat praesentium libre trade</p>
+                                    <h5>Education</h5>
+                                    <p>We are accelerating AI education and expertise at the grassroots in Nigeria and the rest of Africa, exponentially growing the job-ready talent locally available.</p>
                                 </div>
                             </li>
                             <li>
                                 <i class="bx bx-images"></i>
                                 <div>
-                                    <h5>Magnam soluta odio exercitationem reprehenderi</h5>
-                                    <p>Quo totam dolorum at pariatur aut distinctio dolorum laudantium illo direna pasata redi</p>
+                                    <h5>Industry</h5>
+                                    <p>We are accelerating the proliferation of AI-enabled solutions in industry feeding from local talent, thereby building a sustainable and thriving AI ecosystem in synergy with our counterparts abroad.</p>
                                 </div>
                             </li>
                         </ul>
-                        <p>
-                            Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                            id est laborum
-                        </p>
+                        <!-- <p>
+                            We are scaling the AI ecosystem in Africa through local talent, local companies and local products.
+                        </p> -->
                     </div>
                 </div>
 
@@ -164,7 +165,7 @@
         <!-- End About Section -->
 
         <!-- ======= Clients Section ======= -->
-        <section id="clients" class="clients section-bg">
+        <!-- <section id="clients" class="clients section-bg">
             <div class="container" data-aos="zoom-in">
 
                 <div class="row">
@@ -196,7 +197,7 @@
                 </div>
 
             </div>
-        </section>
+        </section> -->
         <!-- End Clients Section -->
 
         <!-- ======= Services Section ======= -->
@@ -656,9 +657,9 @@
                     <div class="col-lg-3 col-md-6 footer-contact">
                         <h3>Gamma Prime<span>.</span></h3>
                         <p>
-                            A108 Adam Street <br> New York, NY 535022<br> United States <br><br>
-                            <strong>Phone:</strong> +1 5589 55488 55<br>
-                            <strong>Email:</strong> info@example.com<br>
+                            5 Erie Close Off Erie Crescent <br> Off Nile Street <br> Maitama, Abuja <br><br>
+                            <strong>Phone:</strong> +234 8174993803<br>
+                            <strong>Email:</strong> gammaprimelimited@gmail.com<br>
                         </p>
                     </div>
 
