Fix: update contact

--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                         <div class="info-box mb-4">
                             <i class="bx bx-map"></i>
                             <h3>Our Address</h3>
-                            <p>A108 Adam Street, New York, NY 535022</p>
+                            <p>5 Erie Close Off Erie Crescent, Off Nile Street, Maitama, Abuja</p>
                         </div>
                     </div>
 
@@ -578,7 +578,7 @@
                         <div class="info-box  mb-4">
                             <i class="bx bx-envelope"></i>
                             <h3>Email Us</h3>
-                            <p>contact@example.com</p>
+                            <p>gammaprimelimited@gmail.com</p>
                         </div>
                     </div>
 
@@ -586,7 +586,7 @@
                         <div class="info-box  mb-4">
                             <i class="bx bx-phone-call"></i>
                             <h3>Call Us</h3>
-                            <p>+1 5589 55488 55</p>
+                            <p>+234 8174993803</p>
                         </div>
                     </div>
 
