Feat: dark colors

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div>
                 <a class="d-flex logo" href="index.html">
                     <img style="width: 2rem; height: 2rem;" src="logo1.png" alt="" srcset="">
-                    <p style="margin: 8px 5px; font-size: 15px; color: rgba(0, 0, 0, 0.823);">Gamma Prime</p>
+                    <p style="margin: 8px 5px; font-size: 15px; color: #f7f7f7;">Gamma Prime</p>
                 </a>
             </div>
 
@@ -51,7 +51,7 @@
                     <li><a class="nav-link scrollto" href="#team">Team</a></li>
                     <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
                 </ul>
-                <i class="bi bi-list mobile-nav-toggle"></i>
+                <i style="color: white;" class="bi bi-list mobile-nav-toggle"></i>
             </nav>
 
             <a href="register.html">
