Fix: tesmonial img

--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
 
                         <div class="swiper-slide">
                             <div class="testimonial-item">
-                                <img src="landingPageAssets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                                <h3>Umar Demeji</h3>
+                                <img src="landingPageAssets/img/drako.jpeg" class="testimonial-img" alt="">
+                                <h3>Adebayo Drako</h3>
                                 <h4>Ceo &amp; Founder</h4>
                                 <p>
                                     <i class="bx bxs-quote-alt-left quote-icon-left"></i> Coming soon...
@@ -286,7 +286,7 @@
 
                         <div class="swiper-slide">
                             <div class="testimonial-item">
-                                <img src="landingPageAssets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+                                <img src="landingPageAssets/img/drako.jpeg" class="testimonial-img" alt="">
                                 <h3>Sara Wilsson</h3>
                                 <h4>Designer</h4>
                                 <p>
@@ -299,7 +299,7 @@
 
                         <div class="swiper-slide">
                             <div class="testimonial-item">
-                                <img src="landingPageAssets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+                                <img src="landingPageAssets/img/drako.jpeg" class="testimonial-img" alt="">
                                 <h3>Ben Umar</h3>
                                 <h4>Store Owner</h4>
                                 <p>
@@ -312,7 +312,7 @@
 
                         <div class="swiper-slide">
                             <div class="testimonial-item">
-                                <img src="landingPageAssets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+                                <img src="landingPageAssets/img/drako.jpeg" class="testimonial-img" alt="">
                                 <h3>Matt Brandon</h3>
                                 <h4>Freelancer</h4>
                                 <p>
@@ -325,7 +325,7 @@
 
                         <div class="swiper-slide">
                             <div class="testimonial-item">
-                                <img src="landingPageAssets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                                <img src="landingPageAssets/img/drako.jpeg" class="testimonial-img" alt="">
                                 <h3>John Larson</h3>
                                 <h4>Entrepreneur</h4>
                                 <p>
