--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                             <li>
                                 <i class="bx bx-images"></i>
                                 <div>
-                                    <h5>Industry</h5>
-                                    <p>We are accelerating the proliferation of AI-enabled solutions in industry feeding from local talent, thereby building a sustainable and thriving AI ecosystem in synergy with our counterparts abroad.</p>
+                                    <h5>industries</h5>
+                                    <p>We are accelerating the proliferation of AI-enabled solutions in industries feeding from local talent, thereby building a sustainable and thriving AI ecosystem in synergy with our counterparts abroad.</p>
                                 </div>
                             </li>
                         </ul>
@@ -205,56 +205,39 @@
             <div class="container" data-aos="fade-up">
 
                 <div class="section-title">
-                    <h2>Services</h2>
                     <h3>Check our <span>Services</span></h3>
+                    <p style="color: #bfbfbf;">A Multi-Pronged Approach to AI Democratisation</p>
                 </div>
 
                 <div class="row">
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+
+                    <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                            <h4><a href="">Service One</a></h4>
-                            <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                            <h4><a href="">Supply</a></h4>
+                            <p>We are accelerating the proliferation of AI-enabled solutions in industries feeding from local talent, thereby building a sustainable and thriving AI ecosystem in synergy with our counterparts abroad.</p>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+                    <div class="col-lg-6 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bx-file"></i></div>
-                            <h4><a href="">Service Two</a></h4>
-                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                            <h4><a href="">Demand</a></h4>
+                            <p>We are accelerating the proliferation of AI-enabled solutions in industries feeding from local talent, thereby building a sustainable and thriving AI ecosystem in synergy with our counterparts abroad.</p>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
-                        <div class="icon-box">
-                            <div class="icon"><i class="bx bx-tachometer"></i></div>
-                            <h4><a href="">Service Three</a></h4>
-                            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+                    <div style="height: 2rem;" class="col-lg-6 col-md-6 mt-2" data-aos="zoom-in" data-aos-delay="1500">
+                        <div class="icon-box-below">
+                            <div class="icon"><i class="bx bxl-dribbble"></i></div>
+                            <h4 style="font-size: 20px;"><a href="">Courses</a></h4>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
-                        <div class="icon-box">
-                            <div class="icon"><i class="bx bx-world"></i></div>
-                            <h4><a href="">Service Four</a></h4>
-                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
-                        <div class="icon-box">
-                            <div class="icon"><i class="bx bx-slideshow"></i></div>
-                            <h4><a href="">Service Five</a></h4>
-                            <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
-                        <div class="icon-box">
-                            <div class="icon"><i class="bx bx-arch"></i></div>
-                            <h4><a href="">Service Six</a></h4>
-                            <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+                    <div class="col-lg-6 col-md-6 mt-2" data-aos="zoom-in" data-aos-delay="1700">
+                        <div class="icon-box-below">
+                            <div class="icon"><i class="bx bx-file"></i></div>
+                            <h4 style="font-size: 20px;"><a href="">Industries</a></h4>
                         </div>
                     </div>
 
@@ -273,7 +256,7 @@
 
                         <div class="swiper-slide">
                             <div class="testimonial-item">
-                                <img src="landingPageAssets/img/drako.jpeg" class="testimonial-img" alt="">
+                                <img src="landingPageAssets/img/Rectangle.png" class="testimonial-img" alt="">
                                 <h3>Adebayo Drako</h3>
                                 <h4>Ceo &amp; Founder</h4>
                                 <p>
@@ -286,7 +269,7 @@
 
                         <div class="swiper-slide">
                             <div class="testimonial-item">
-                                <img src="landingPageAssets/img/drako.jpeg" class="testimonial-img" alt="">
+                                <img src="landingPageAssets/img/Rectangle.png" class="testimonial-img" alt="">
                                 <h3>Sara Wilsson</h3>
                                 <h4>Designer</h4>
                                 <p>
@@ -299,7 +282,7 @@
 
                         <div class="swiper-slide">
                             <div class="testimonial-item">
-                                <img src="landingPageAssets/img/drako.jpeg" class="testimonial-img" alt="">
+                                <img src="landingPageAssets/img/Rectangle.png" class="testimonial-img" alt="">
                                 <h3>Ben Umar</h3>
                                 <h4>Store Owner</h4>
                                 <p>
@@ -312,7 +295,7 @@
 
                         <div class="swiper-slide">
                             <div class="testimonial-item">
-                                <img src="landingPageAssets/img/drako.jpeg" class="testimonial-img" alt="">
+                                <img src="landingPageAssets/img/Rectangle.png" class="testimonial-img" alt="">
                                 <h3>Matt Brandon</h3>
                                 <h4>Freelancer</h4>
                                 <p>
@@ -325,7 +308,7 @@
 
                         <div class="swiper-slide">
                             <div class="testimonial-item">
-                                <img src="landingPageAssets/img/drako.jpeg" class="testimonial-img" alt="">
+                                <img src="landingPageAssets/img/Rectangle.png" class="testimonial-img" alt="">
                                 <h3>John Larson</h3>
                                 <h4>Entrepreneur</h4>
                                 <p>
@@ -476,7 +459,7 @@
                     <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
                         <div class="member">
                             <div class="member-img">
-                                <img src="landingPageAssets/img/team/team-1.jpg" class="img-fluid" alt="">
+                                <img src="landingPageAssets/img/Rectangle.png" class="img-fluid" alt="">
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
                                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -485,8 +468,8 @@
                                 </div>
                             </div>
                             <div class="member-info">
-                                <h4>Walter White</h4>
-                                <span>Chief Executive Officer</span>
+                                <h4>Coming soon...</h4>
+                                <span>Coming soon...</span>
                             </div>
                         </div>
                     </div>
@@ -494,7 +477,7 @@
                     <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
                         <div class="member">
                             <div class="member-img">
-                                <img src="landingPageAssets/img/team/team-2.jpg" class="img-fluid" alt="">
+                                <img src="landingPageAssets/img/Rectangle.png" class="img-fluid" alt="">
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
                                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -503,8 +486,8 @@
                                 </div>
                             </div>
                             <div class="member-info">
-                                <h4>Sarah Jhonson</h4>
-                                <span>Product Manager</span>
+                                <h4>Coming soon...</h4>
+                                <span>Coming soon...</span>
                             </div>
                         </div>
                     </div>
@@ -512,7 +495,7 @@
                     <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
                         <div class="member">
                             <div class="member-img">
-                                <img src="landingPageAssets/img/team/team-3.jpg" class="img-fluid" alt="">
+                                <img src="landingPageAssets/img/Rectangle.png" class="img-fluid" alt="">
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
                                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -521,8 +504,8 @@
                                 </div>
                             </div>
                             <div class="member-info">
-                                <h4>William Anderson</h4>
-                                <span>CTO</span>
+                                <h4>Coming soon...</h4>
+                                <span>Coming soon...</span>
                             </div>
                         </div>
                     </div>
@@ -530,7 +513,7 @@
                     <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
                         <div class="member">
                             <div class="member-img">
-                                <img src="landingPageAssets/img/team/team-4.jpg" class="img-fluid" alt="">
+                                <img src="landingPageAssets/img/Rectangle.png" class="img-fluid" alt="">
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
                                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -539,8 +522,8 @@
                                 </div>
                             </div>
                             <div class="member-info">
-                                <h4>Amanda Jepson</h4>
-                                <span>Accountant</span>
+                                <h4>Coming soon...</h4>
+                                <span>Coming soon...</span>
                             </div>
                         </div>
                     </div>
